feat: improve sessions listing filters
